--- a/source/stylesheets/glide/_variables.scss
+++ b/source/stylesheets/glide/_variables.scss
@@ -8,7 +8,7 @@ $light-blue: #2DDCFF;  // accent #2
 
 // Font stack
 $sans-serif: 'Helvetica Neue', helvetica, sans-serif;
-$titles: 'Helvetica Neue', helvetica, sans-serif;
+$titles: 'Bree Serif', 'Helvetica Neue', helvetica, sans-serif;
 // $titles: 'Raleway', 'Century Gothic', 'Helvetica Neue', helvetica, sans-serif;
 
 
@@ -18,6 +18,6 @@ $inside-width: 58em;
 // Responsive
 $phone-1: 460px;
 $tablet-1: 600px;
-$tablet-2: 900px;
+$tablet-2: 1030px;
 $desktop-1: 1200px;
 $desktop-2: 1400px;
