--- a/source/stylesheets/glide/glide.scss
+++ b/source/stylesheets/glide/glide.scss
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
-@import "normalize";
+
 @import "variables";
 @import "base";
-@import "book";
+@import "main";
 @import "anchor";
