Refactored pagination to use locally scoped pagelist, and other improvements.

--- a/source/layouts/epsilon/layout.erb
+++ b/source/layouts/epsilon/layout.erb
@@ -49,8 +49,8 @@
             </div>
             <nav class="main-content-nav clearfix" role="navigation">
               <ul>
-                <li><%= previous_link %></li>
-                <li><%= next_link %></li>
+                <li><%= previous_link(data['tree']['source/book']) %></li>
+                <li><%= next_link(data['tree']['source/book']) %></li>
               </ul>
             </nav>
           </section>
