--- a/source/layouts/hamilton/layout.erb
+++ b/source/layouts/hamilton/layout.erb
@@ -56,8 +56,8 @@
           </div>
           <nav class="main-content-nav clearfix" role="navigation">
             <ul class="clearfix">
-              <li><%= previous_link %></li>
-              <li><%= next_link %></li>
+              <li><%= previous_link(data['tree']['source/book']) %></li>
+                <li><%= next_link(data['tree']['source/book']) %></li>
             </ul>
           </nav>
         </section>
