--- a/source/layouts/glide/layout.erb
+++ b/source/layouts/glide/layout.erb
@@ -13,6 +13,7 @@
 
     <!-- Styles and fonts -->
     <%= stylesheet_link_tag "all/all" %>
+    <%= stylesheet_link_tag "all/syntax" %>
     <%= stylesheet_link_tag "glide/glide" %>
     <link href='http://fonts.googleapis.com/css?family=Bree+Serif&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
