--- a/source/layouts/hamilton/layout.erb
+++ b/source/layouts/hamilton/layout.erb
@@ -13,6 +13,7 @@
 
     <!-- Styles and fonts -->
     <%= stylesheet_link_tag "all/all" %>
+    <%= stylesheet_link_tag "all/syntax" %>
     <%= stylesheet_link_tag "hamilton/hamilton" %>
     <link href='http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,700italic,700' rel='stylesheet' type='text/css'>
 
