--- a/source/stylesheets/all/_html5bp.scss
+++ b/source/stylesheets/all/_html5bp.scss
@@ -67,6 +67,7 @@ textarea {
     background: #ccc;
     color: #000;
     padding: 0.2em 0;
+    text-align: center;
 }
 
 /* ==========================================================================
