--- a/source/layouts/epsilon/layout.erb
+++ b/source/layouts/epsilon/layout.erb
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title><%= discover_title %></title>
+    <title><%= discover_page_title %></title>
 
     <!-- Styles and fonts -->
     <%= stylesheet_link_tag "all/all" %>
@@ -28,8 +28,8 @@
       <a id="menu-toggle" class="menu-toggle" href="#sidr"><span class="bitcon-list"></span><span class="menu-toggle-text">Toggle Menu</span></a>
       <header class="page-header" role="banner">
         <%# @todo: only link to the index page if there is an index.md file %>
-        <% link_to_if_exists '/book/index.html', :class => "invisilink" do %>
-          <% if ['index.html', 'book/index.html'].include? current_page.path %>
+        <% link_to_if_exists '/index.html', :class => "invisilink" do %>
+          <% if ['index.html'].include? current_page.path %>
             <h1 class="book-title"><%= data.book.title %></h1>
           <% else %>
             <span class="book-title"><%= data.book.title %></span>
@@ -73,9 +73,10 @@
                 <p>The source of this book is <a href="<%= data.book.github_url %>">hosted on Github</a>. Go, ahead. Check it out.</p>
               </div>
 
+              <!--
               <div class="block downloads">
                 <h3>Downloads</h3>
-                <p>Download this book in 
+                <p>Download this book in
                     <a href="#">PDF</a>, <a href="#">mobi</a>, and <a href="#">epub</a>
                   form for free.
                 </p>
@@ -83,12 +84,13 @@
 
               <div class="block translations">
                 <h3>Book translations</h3>
-                <p>This book is translated into 
+                <p>This book is translated into
                   <a href="#">Spanish</a>
                   and <a href="#">English</a>.
                   You can help with more translations <a href="<%= data.book.github_url %>">on Github</a>.
                 </p>
               </div>
+              -->
 
               <div class="block license">
                 <h3>License</h3>
