--- a/source/layouts/glide/layout.erb
+++ b/source/layouts/glide/layout.erb
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title><%= discover_title %></title>
+    <title><%= discover_page_title %></title>
 
     <!-- Styles and fonts -->
     <%= stylesheet_link_tag "all/all" %>
@@ -30,8 +30,8 @@
       <![endif]-->
 
       <header class="page-header" role="banner">
-        <% link_to_if_exists '/book/index.html', :class => "invisilink" do %>
-          <% if ['index.html', 'book/index.html'].include? current_page.path %>
+        <% link_to_if_exists '/index.html', :class => "invisilink" do %>
+          <% if ['index.html'].include? current_page.path %>
             <h1 class="book-title"><%= data.book.title %></h1>
           <% else %>
             <span class="book-title"><%= data.book.title %></span>
@@ -65,12 +65,16 @@
                   </ul>
                 </nav>
               </div>
-
-              <div class="block open-source">
-                <h3>This book is open source</h3>
-                <p>The source of this book is <a href="<%= data.book.github_url %>">hosted on Github</a>. Go, ahead. Check it out.</p>
+              <!--
+              <div class="block translations">
+                <h3>Book translations</h3>
+                <p>This book is translated into 
+                  <a href="#">Spanish</a>
+                  and <a href="#">English</a>.
+                  You can help with more translations <a href="<%= data.book.github_url %>">on Github</a>.
+                </p>
               </div>
-
+              -->
             </div><!-- end aside-wrapper -->
           </aside>
 
@@ -79,27 +83,23 @@
       <footer class="page-footer">
 
         <div class="footer-wrapper">
-
-          <div class="block downloads">
+          <!--
+          <div class="block downloads">&nbsp;
             <h3>Downloads</h3>
             <p>Download this book in
                 <a href="#">PDF</a>, <a href="#">mobi</a>, and <a href="#">epub</a>
               form for free.
             </p>
           </div>
-
-          <div class="block translations">
-            <h3>Book translations</h3>
-            <p>This book is translated into 
-              <a href="#">Spanish</a>
-              and <a href="#">English</a>.
-              You can help with more translations <a href="<%= data.book.github_url %>">on Github</a>.
-            </p>
-          </div>
-
+          -->
           <div class="block license">
             <h3>License</h3>
             <p>This book is licensed under the <a href="<%= data.book.license_url %>"><%= data.book.license_name %></a> license.</p>
+          </div>
+
+          <div class="block open-source">
+            <h3>This book is open source</h3>
+            <p>The source of this book is <a href="<%= data.book.github_url %>">hosted on Github</a>. Go, ahead. Check it out.</p>
           </div>
 
           <small class="small-text">Copyright 2013</small>
