--- a/source/themes/glide/layouts/layout.erb
+++ b/source/themes/glide/layouts/layout.erb
@@ -12,14 +12,13 @@
     <title><%= discover_page_title %></title>
 
     <!-- Styles and fonts -->
-    <%= stylesheet_link_tag "all/all" %>
-    <%= stylesheet_link_tag "all/syntax" %>
-    <%= stylesheet_link_tag "glide/glide" %>
+    <%= stylesheet_link_tag "themes/glide/stylesheets/glide" %>
+    <%= stylesheet_link_tag "themes/glide/stylesheets/syntax" %>
     <link href='http://fonts.googleapis.com/css?family=Bree+Serif&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-    <%= javascript_include_tag  "all/modernizr" %>
+    <%= javascript_include_tag  "themes/glide/javascripts/modernizr" %>
   </head>
 
   <body class="<%= page_classes %> glide">
@@ -112,7 +111,7 @@
     </div><!-- end page-wrapper -->
 
     <!-- include scripts just before the close of the body tag -->
-    <%= javascript_include_tag "all/anchor.min" %>
-    <%= javascript_include_tag "all/all" %>
+    <%= javascript_include_tag "themes/glide/javascripts/anchor.min" %>
+    <%= javascript_include_tag "themes/glide/javascripts/glide" %>
   </body>
 </html>
