Update asset Google font & jQuery URLs to use https.

--- a/source/themes/epsilon/layouts/layout.erb
+++ b/source/themes/epsilon/layouts/layout.erb
@@ -14,7 +14,7 @@
     <!-- Styles and fonts -->
     <%= stylesheet_link_tag "themes/epsilon/stylesheets/epsilon" %>
     <%= stylesheet_link_tag "themes/epsilon/stylesheets/syntax" %>
-    <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700|Noticia+Text:400,400italic,700,700italic&subset=latin,latin-ext,vietnamese' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lato:100,300,400,700|Noticia+Text:400,400italic,700,700italic&subset=latin,latin-ext,vietnamese' rel='stylesheet' type='text/css'>
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
@@ -109,7 +109,7 @@
     </div><!-- end page-wrapper -->
 
     <!-- include scripts just before the close of the body tag -->
-    <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <%= javascript_include_tag "themes/epsilon/javascripts/jquery.sidr.min" %>
     <%= javascript_include_tag "themes/epsilon/javascripts/anchor.min" %>
     <%= javascript_include_tag "themes/epsilon/javascripts/epsilon" %>
