--- a/source/themes/glide/layouts/layout.erb
+++ b/source/themes/glide/layouts/layout.erb
@@ -14,7 +14,7 @@
     <!-- Styles and fonts -->
     <%= stylesheet_link_tag "themes/glide/stylesheets/glide" %>
     <%= stylesheet_link_tag "themes/glide/stylesheets/syntax" %>
-    <link href='http://fonts.googleapis.com/css?family=Bree+Serif&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Bree+Serif&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
@@ -67,7 +67,7 @@
               <!--
               <div class="block translations">
                 <h3>Book translations</h3>
-                <p>This book is translated into 
+                <p>This book is translated into
                   <a href="#">Spanish</a>
                   and <a href="#">English</a>.
                   You can help with more translations <a href="<%= data.book.github_url %>">on Github</a>.
