--- a/source/themes/glide/layouts/layout.erb
+++ b/source/themes/glide/layouts/layout.erb
@@ -12,8 +12,8 @@
     <title><%= discover_page_title %></title>
 
     <!-- Styles and fonts -->
-    <%= stylesheet_link_tag "themes/glide/stylesheets/glide" %>
-    <%= stylesheet_link_tag "themes/glide/stylesheets/syntax" %>
+    <%= stylesheet_link_tag :glide %>
+    <%= stylesheet_link_tag :syntax %>
     <link href='https://fonts.googleapis.com/css?family=Bree+Serif&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -101,7 +101,7 @@
             <p>The source of this book is <a href="<%= data.book.github_url %>">hosted on Github</a>. Go, ahead. Check it out.</p>
           </div>
 
-          <small class="small-text">Copyright 2013</small>
+          <small class="small-text">Copyright <%= Time.now.year %></small>
 
         </div><!-- end footer-wrapper -->
 
