--- a/source/themes/glide/stylesheets/syntax.css.erb
+++ b/source/themes/glide/stylesheets/syntax.css.erb
@@ -2,7 +2,8 @@
 <%#= Rouge::Themes::Github.render(:scope => '.highlight') %>
 
 <%# A good day theme, and is very colorful %>
-<%= Rouge::Themes::Base16.render(:scope => '.highlight') %>
+<%# <%= Rouge::Themes::Base16.render(:scope => '.highlight') %>
+<%= Rouge::Themes::ThankfulEyes.render(:scope => '.highlight') %>
 
 <%# That good sublime text night theme%>
 <%#= Rouge::Themes::Base16::Monokai.render(:scope => '.highlight') %>
