--- a/source/themes/hamilton/layouts/layout.erb
+++ b/source/themes/hamilton/layouts/layout.erb
@@ -42,7 +42,8 @@
 
       <div class="content-wrapper clearfix">
         <div class="toc" id="toc">
-          <a href="#" class="toc-title" id="toc-title"><h3>Table of Contents</h3></a>
+          <a href="#" class="toc-title" id="toc-title">
+          <h3><%= I18n.t('table_of_contents', default: 'Table of Contents') %></h3>
           <nav role="navigation" id="toc-nav" style="display: none;">
             <ul id="toc-list">
               <%= tree_to_html(data.tree) %>
@@ -88,7 +89,7 @@
           -->
           <div class="block-pair clearfix">
             <div class="block license">
-              <h3>License</h3>
+              <h3><%= I18n.t('license', default: 'License') %></h3>
               <p>This book is licensed under the <a href="<%= data.book.license_url %>"><%= data.book.license_name %></a> license.</p>
             </div>
             <div class="block open-source">
